Bug 1836511 - Track filter-moved messages for POP3 accounts to properly update new message counts and notify. r=BenC

- Introduce m_filterTargetFoldersMsgMovedCount to track moved messages
- Set msgIsNew to false for filter-moved messages to decrease inbox new message count
- Update filter target folders new message counts and fire notification at the end of message download

Differential Revision: https://phabricator.services.mozilla.com/D220509

--HG--
extra : moz-landing-system : lando